fix scroll + canvas in dark mode.

--- a/main.css
+++ b/main.css
@@ -1,10 +1,11 @@
 canvas{
     position: fixed;
-    z-index: -1;
+    z-index: 1;
 }
 .container{
     margin-top: 5em;
     position: relative;
+    z-index: 2;
 }
 .top-nav{
     display:block;
