--- a/section.css
+++ b/section.css
@@ -5,7 +5,7 @@ section{
 
 section.second {
     color: white;
-    z-index: 2;
+    z-index: 0;
     position: relative;
 }
 
